@@ -1,19 +1,0 @@
-# $NetBSD: Makefile,v 1.13 2022/01/04 20:55:34 wiz Exp $
-
-DISTNAME=	python-digest-1.7
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
-CATEGORIES=	python www
-MASTER_SITES=	${MASTER_SITE_PYPI:=p/python-digest/}
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://bitbucket.org/akoha/python-digest/
-COMMENT=	Python library to aid in implementing HTTP Digest Authentication
-LICENSE=	modified-bsd
-
-USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_ACCEPTED=	27
-
-.include "../../lang/python/egg.mk"
-.include "../../mk/bsd.pkg.mk"
