@@ -1,18 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2014/06/02 04:27:32 rodent Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/${EGG_INFODIR}/zip-safe
-${PYSITELIB}/python_digest/__init__.py
-${PYSITELIB}/python_digest/__init__.pyc
-${PYSITELIB}/python_digest/__init__.pyo
-${PYSITELIB}/python_digest/http.py
-${PYSITELIB}/python_digest/http.pyc
-${PYSITELIB}/python_digest/http.pyo
-${PYSITELIB}/python_digest/tests.py
-${PYSITELIB}/python_digest/tests.pyc
-${PYSITELIB}/python_digest/tests.pyo
-${PYSITELIB}/python_digest/utils.py
-${PYSITELIB}/python_digest/utils.pyc
-${PYSITELIB}/python_digest/utils.pyo
