@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2022,v 1.3468 2022/07/20 22:56:23 wiz Exp $
+$NetBSD: CHANGES-2022,v 1.3469 2022/07/20 22:58:18 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2022:
 
@@ -5220,3 +5220,4 @@ Changes to the packages collection and infrastructure in 2022:
 	Updated cad/kicad-templates to 6.0.6 [tnn 2022-07-20]
 	Updated devel/py-zanata-python-client to 1.5.3 [wiz 2022-07-20]
 	Updated www/py-django-tastypie to 0.14.4 [wiz 2022-07-20]
+	Removed www/py-python-digest successor www/py-python3-digest [wiz 2022-07-20]
